Fix: Close media query properly to fix CSS syntax error

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -273,8 +273,9 @@
   .SearchResults {
     width: 100%;
   }
+}
 
-  /* Player and Visualizer Container */
+/* Player and Visualizer Container */
 .player-visualizer-container {
   display: flex;
   flex-direction: column;
